Corrected nameblock spacing issue.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,6 @@ a{
 	font-size: 30px;
 	line-height: 50px;
 	font-family: 'Georgia', Times, Times New Roman, serif;
-	width: 200px;
 }
 
 #headshot{
